Made changes on img source

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My Profile</title>
     <div align="center">
-        <img src="img/avatar.png" height="300" width="260">
+        <img src="avatar.png" height="300" width="260">
         <hr>
         <h1 style="font-family: 'Apple Chancery'">Dhakal, Nischal</h1>
         <h2 style="font-family: AppleGothic">My Assignments:</h2>
