--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>My Profile</title>
-    <div align="center">
-        <img src="avatar.png" height="300" width="260">
+    <div>
+        <img src="img/avatar.png" height="300" width="260" alt="Avatar">
         <hr>
         <h1 style="font-family: 'Apple Chancery'">Dhakal, Nischal</h1>
         <h2 style="font-family: AppleGothic">My Assignments:</h2>
-        <h3 style="font-size: 20px; font-family: AppleGothic">
-            <ul>
-            <li>Lab 1</li>
-            <li>Lab 2</li>
-            <li>Lab 3</li>
-            <li>Lab 4</li>
-            <li>Lab 5</li>
-            </ul></h3>
-        
-        <br />
-        <br />
-        <a href="http://validator.w3.org/check/referer"> 
-            <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-        </a>
+        <ul>
+            <h3 style="font-size: 20px; font-family: AppleGothic">
+                <li>Lab 1</li>
+                <li>Lab 2</li>
+                <li>Lab 3</li>
+                <li>Lab 4</li>
+                <li>Lab 5</li>
+            </h3>
+        </ul>
 
     </div>
+
+</head> <br />
+<br />
+<a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+
+<body>
 
 </body>
 </html>
