--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My Profile</title>
     <div>
-        <img src="img/avatar.png" height="300" width="260" alt="Avatar">
+        <img src="avatar.png" height="300" width="260" alt="Avatar">
         <hr>
         <h1 style="font-family: 'Apple Chancery'">Dhakal, Nischal</h1>
         <h2 style="font-family: AppleGothic">My Assignments:</h2>
@@ -22,8 +22,13 @@
 
 </head> <br />
 <br />
-<a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
-
+<p>
+  <a href="http://validator.w3.org/check?uri=referer"
+     onclick="this.href='http://validator.w3.org/check?uri=' + 
+document.URL"><img
+      src="http://www.w3.org/Icons/valid-xhtml10"
+      alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+</p>
 <body>
 
 </body>
