--- a/index.html
+++ b/index.html
@@ -4,32 +4,28 @@
     <meta charset="UTF-8">
     <title>My Profile</title>
     <div>
-        <img src="avatar.png" height="300" width="260" alt="Avatar">
+        <img src="img/avatar.png" height="300" width="260" alt="Avatar">
         <hr>
         <h1 style="font-family: 'Apple Chancery'">Dhakal, Nischal</h1>
         <h2 style="font-family: AppleGothic">My Assignments:</h2>
-        <ul>
-            <h3 style="font-size: 20px; font-family: AppleGothic">
+        <ul style="font-size: 20px; font-family: AppleGothic">
                 <li>Lab 1</li>
                 <li>Lab 2</li>
                 <li>Lab 3</li>
                 <li>Lab 4</li>
                 <li>Lab 5</li>
-            </h3>
         </ul>
-
+        <br />
+        <br />
+        <p>
+            <a href="http://validator.w3.org/check?uri=referer"
+               onclick="this.href='http://validator.w3.org/check?uri='+document.URL"><img
+                    src="http://www.w3.org/Icons/valid-xhtml10"
+                    alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+        </p>
     </div>
 
-</head> <br />
-<br />
-<p>
-  <a href="http://validator.w3.org/check?uri=referer"
-     onclick="this.href='http://validator.w3.org/check?uri=' + 
-document.URL"><img
-      src="http://www.w3.org/Icons/valid-xhtml10"
-      alt="Valid XHTML 1.0!" height="31" width="88" /></a>
-</p>
+</head>
 <body>
-
 </body>
 </html>
