--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br />
     <br />
     <p>
-        <a href="http://validator.w3.org/check?uri=replace-your-url-here"> 
+        <a href="http://validator.w3.org/check?uri=https://bouncerate.github.io/repoForWap/"> 
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
     </p>
 </div>
