Used <link href> for css instead of @import

--- a/lab2_recipe/pie.html
+++ b/lab2_recipe/pie.html
@@ -7,7 +7,7 @@
 <head>
 	<title>Recipe</title>	
 	<link rel="icon" type="image/png" href="../recipeImages/pie_icon.gif"/>
-	<style>@import url('recipe.css')</style>
+	<link href="recipe.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
