--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1 style="font-family: 'Apple Chancery'">Dhakal, Nischal</h1>
     <h2 style="font-family: AppleGothic">My Assignments:</h2>
     <ul style="font-size: 20px; font-family: AppleGothic">
-        <li>Lab 1</li>
-        <li>Lab 2</li>
+        <li><a href="index.html">Lab 1</a></li>
+        <li><a href="lab2_recipe/pie.html">Lab 2</a></li>
         <li>Lab 3</li>
         <li>Lab 4</li>
         <li>Lab 5</li>
