--- a/lab2_recipe/pie.html
+++ b/lab2_recipe/pie.html
@@ -3,9 +3,9 @@
 	<title>Choose Lab 2</title>	
 </head>
 <body>
-	<h1>Welcome! Choose Lab 2</h1>
+	<h2 font-family="helvetica">Welcome! Choose Lab 2</h2>
 	<ul>
-		<li><a href="aboutMe.html">About Me</a></li>
+		<li><a href="aboutme.html">About Me</a></li>
 		<li><a href="index.html">Granny's Pie Recipe</a></li>
 	</ul>
 </body>	
