--- a/lab2_recipe/aboutme.html
+++ b/lab2_recipe/aboutme.html
@@ -26,10 +26,10 @@
 		<div id="text1"><figcaption>Happy :)<caption></div>
 		<div><figcaption>Sad :(</figcaption></div>
 		<div id="left">
-		<img src="happy.png" alt="Happy" width="300px" height="300px">
+		<img src="aboutImages/happy.png" alt="Happy" width="300px" height="300px">
 		</div>
 		<div>
-		<img src="sad.png" alt="Sad" width="300px" height="300px">
+		<img src="aboutImages/sad.png" alt="Sad" width="300px" height="300px">
 		</div>
 	</div>
 	<br />
