--- a/lab2_recipe/index.html
+++ b/lab2_recipe/index.html
@@ -98,11 +98,11 @@
     other lemon meringue pie recipes</a> </p>
 <p> <a class="linkColor" href="https://bouncerate.github.io/repoForWap/">Home</a></p>
 
-<a class="right" href="https://validator.w3.org/check/referer">
+<a class="right" href="validator.w3.org/check?uri=https://bouncerate.github.io/repoForWap/lab2_recipe/">
     <img class="referer" src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" />
 </a>
 
-<a class="right" href="https://jigsaw.w3.org/css-validator/check/referer">
+<a class="right" href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fbouncerate.github.io%2FrepoForWap%2Flab2_recipe&profile=css3svg&usermedium=all&warning=1&vextwarning=">
     <img class="referer" src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator" />
 </a>
 
