--- a/lab2_recipe/index.html
+++ b/lab2_recipe/index.html
@@ -98,7 +98,7 @@
     other lemon meringue pie recipes</a> </p>
 <p> <a class="linkColor" href="https://bouncerate.github.io/repoForWap/">Home</a></p>
 
-<a class="right" href="validator.w3.org/check?uri=https://bouncerate.github.io/repoForWap/lab2_recipe/">
+<a class="right" href="http://validator.w3.org/check?uri=https://bouncerate.github.io/repoForWap/lab2_recipe/">
     <img class="referer" src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" />
 </a>
 
