--- a/lab3_movie/tmnt.html
+++ b/lab3_movie/tmnt.html
@@ -1,187 +1,195 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>TMNT - Rancid Tomatoes</title>
+<head>
+    <title>TMNT - Rancid Tomatoes</title>
 
-		<meta charset="utf-8" />
-		<link href="movie.css" type="text/css" rel="stylesheet" />
-		<link rel="icon" href="/images/rotten.gif" type='image/png' />
-	</head>
+    <meta charset="utf-8"/>
+    <link href="movie.css" type="text/css" rel="stylesheet"/>
+    <link rel="icon" href="/images/rotten.gif" type='image/png'/>
+</head>
 
-	<body>
-		<div class="banner">
-			<img src="images/banner.png" alt="Rancid Tomatoes" />
-		</div>
+<body>
+<div class="banner">
+    <img src="images/banner.png" alt="Rancid Tomatoes"/>
+</div>
 
-		<h1>TMNT (2007)</h1>
-	<div class="container">
+<h1>TMNT (2007)</h1>
+<div class="container">
 
-		<div class="overviewRight">
-			<img src="images/overview.png" alt="general overview" />
-		<dl>
-			<dt>STARRING</dt>
-			<dd>Patrick Stewart <br /> Mako <br /> Sarah Michelle Gellar <br /> Kevin Smith</dd>
-			<br />
-			<dt>DIRECTOR</dt>
-			<dd>Kevin Munroe</dd>
-			<br />
-			<dt>RATING</dt>
-			<dd>PG</dd>
-			<br />
-			<dt>THEATRICAL RELEASE</dt>
-			<dd>Mar 23, 2007</dd>
-			<br />
-			<dt>MOVIE SYNOPSIS</dt>
-			<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
-			<br />
-			<dt>MPAA RATING</dt>
-			<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
-			<br />
-			<dt>RELEASE COMPANY</dt>
-			<dd>Warner Bros.</dd>
-			<br />
-			<dt>RUNTIME</dt>
-			<dd>90 mins</dd>
-			<br />
-			<dt>GENRE</dt>
-			<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
-			<br />
-			<dt>BOX OFFICE</dt>
-			<dd>$54,132,596</dd>
-			<br />
-			<dt>LINKS</dt>
-			<dd>
-				<ul>
-					<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
-					<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
-					<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
-					<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
-				</ul>
-			</dd>
-		</dl>
-	</div>
-		<div class="overviewLeft">
-			<div class="overall">
-				<img src="images/rottenbig.png" alt="Rotten" align="left" />
-				<span class="rate">33%</span>
-			</div>
-			<div class="comments">
-				<div class="commentsIn">
-				<p class="review">
-			<img src="images/rotten.gif" alt="Rotten" />
-			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic">
-			Peter Debruge <br />
-			<i>Variety</i>
-		</p>
-				</div>
-				<div class="commentsIn">
-		<p class="review">
-			<img src="images/fresh.gif" alt="Fresh" />
-			<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic" />
-			Todd Gilchrist <br />
-			<i>IGN Movies</i>
-		</p>
-				</div>
-				<div class="commentsIn">
-		<p class="review">
-			<img src="images/rotten.gif" alt="Rotten" />
-			<q>It stinks!</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic" />
-			Jay Sherman (unemployed)
-		</p>
-				</div>
-				<div class="commentsIn">
-		<p class="review">
-			<img src="images/rotten.gif" alt="Rotten" />
-			<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic" />
-			Joshua Tyler <br />
-			<i>CinemaBlend.com</i>
-		</p>
-				</div>
-				<div class="commentsIn">
-		<p class="review">
-			<img src="images/fresh.gif" alt="Rotten" />
-			<q>I have mixed feelings about it</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic" />
-			Nishal <br />
-			<i>Linkin Park Publications</i>
-		</p>
-				</div>
-	</div>
-			<div class="comments">
+    <div class="overviewRight">
+        <img src="images/overview.png" alt="general overview"/>
+        <dl>
+            <dt>STARRING</dt>
+            <dd>Patrick Stewart <br/> Mako <br/> Sarah Michelle Gellar <br/> Kevin Smith</dd>
+            <br/>
+            <dt>DIRECTOR</dt>
+            <dd>Kevin Munroe</dd>
+            <br/>
+            <dt>RATING</dt>
+            <dd>PG</dd>
+            <br/>
+            <dt>THEATRICAL RELEASE</dt>
+            <dd>Mar 23, 2007</dd>
+            <br/>
+            <dt>MOVIE SYNOPSIS</dt>
+            <dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
+            <br/>
+            <dt>MPAA RATING</dt>
+            <dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
+            <br/>
+            <dt>RELEASE COMPANY</dt>
+            <dd>Warner Bros.</dd>
+            <br/>
+            <dt>RUNTIME</dt>
+            <dd>90 mins</dd>
+            <br/>
+            <dt>GENRE</dt>
+            <dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
+            <br/>
+            <dt>BOX OFFICE</dt>
+            <dd>$54,132,596</dd>
+            <br/>
+            <dt>LINKS</dt>
+            <dd>
+                <ul>
+                    <li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
+                    <li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
+                    <li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
+                    <li><a href="http://mumstudents.org/cs472/">CS472</a></li>
+                </ul>
+            </dd>
+        </dl>
+    </div>
+    <div class="overviewLeft">
+        <div class="overall">
+            <img src="images/rottenbig.png" alt="Rotten" align="left"/>
+            <span class="rate">33%</span>
+        </div>
+        <div class="comments">
+            <div class="commentsIn">
+                <p class="review">
+                    <img src="images/rotten.gif" alt="Rotten"/>
+                    <q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the
+                        movie attempts to look polished and 'cool,' but the been-there animation can't compete with the
+                        then-cutting-edge puppetry of the 1990 live-action movie.</q>
+                </p>
+                <p class="profile">
+                    <img src="images/critic.gif" alt="Critic">
+                    Peter Debruge <br/>
+                    <i>Variety</i>
+                </p>
+            </div>
+            <div class="commentsIn">
+                <p class="review">
+                    <img src="images/fresh.gif" alt="Fresh"/>
+                    <q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of
+                        new ones.</q>
+                </p>
+                <p class="profile">
+                    <img src="images/critic.gif" alt="Critic"/>
+                    Todd Gilchrist <br/>
+                    <i>IGN Movies</i>
+                </p>
+            </div>
+            <div class="commentsIn">
+                <p class="review">
+                    <img src="images/rotten.gif" alt="Rotten"/>
+                    <q>It stinks!</q>
+                </p>
+                <p class="profile">
+                    <img src="images/critic.gif" alt="Critic"/>
+                    Jay Sherman (unemployed)
+                </p>
+            </div>
+            <div class="commentsIn">
+                <p class="review">
+                    <img src="images/rotten.gif" alt="Rotten"/>
+                    <q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't
+                        stopped them from becoming dull.</q>
+                </p>
+                <p class="profile">
+                    <img src="images/critic.gif" alt="Critic"/>
+                    Joshua Tyler <br/>
+                    <i>CinemaBlend.com</i>
+                </p>
+            </div>
+            <div class="commentsIn">
+                <p class="review">
+                    <img src="images/fresh.gif" alt="Rotten"/>
+                    <q>I have mixed feelings about it</q>
+                </p>
+                <p class="profile">
+                    <img src="images/critic.gif" alt="Critic"/>
+                    Nishal <br/>
+                    <i>Linkin Park Publications</i>
+                </p>
+            </div>
+        </div>
+        <div class="comments">
 
-		<p class="review">
-			<img src="images/rotten.gif" alt="Rotten" />
-			<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic" />
-			Jeannette Catsoulis <br />
-			<i>New York Times</i>
-		</p>
+            <p class="review">
+                <img src="images/rotten.gif" alt="Rotten"/>
+                <q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their
+                    countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry
+                    their creators once sought to spoof.</q>
+            </p>
+            <p class="profile">
+                <img src="images/critic.gif" alt="Critic"/>
+                Jeannette Catsoulis <br/>
+                <i>New York Times</i>
+            </p>
 
-		<p class="review">
-			<img src="images/rotten.gif" alt="Rotten" />
-			<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic" />
-			Ed Gonzalez <br />
-			<i>Slant Magazine</i>
-		</p>
+            <p class="review">
+                <img src="images/rotten.gif" alt="Rotten"/>
+                <q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the
+                    filmmakers went along.</q>
+            </p>
+            <p class="profile">
+                <img src="images/critic.gif" alt="Critic"/>
+                Ed Gonzalez <br/>
+                <i>Slant Magazine</i>
+            </p>
 
-		<p class="review">
-			<img src="images/fresh.gif" alt="Fresh" />
-			<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic" />
-			Mark Palermo <br />
-			<i>Coast (Halifax, Nova Scotia)</i>
-		</p>
+            <p class="review">
+                <img src="images/fresh.gif" alt="Fresh"/>
+                <q>The striking use of image and motion allows each sequence to leave an impression. It's an
+                    accomplished restart to this franchise.</q>
+            </p>
+            <p class="profile">
+                <img src="images/critic.gif" alt="Critic"/>
+                Mark Palermo <br/>
+                <i>Coast (Halifax, Nova Scotia)</i>
+            </p>
 
-		<p class="review">
-			<img src="images/rotten.gif" alt="Rotten" />
-			<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic" />
-			Steve Rhodes <br />
-			<i>Internet Reviews</i>
-		</p>
+            <p class="review">
+                <img src="images/rotten.gif" alt="Rotten"/>
+                <q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm
+                    of the three live action films.</q>
+            </p>
+            <p class="profile">
+                <img src="images/critic.gif" alt="Critic"/>
+                Steve Rhodes <br/>
+                <i>Internet Reviews</i>
+            </p>
 
-		<p class="review">
-			<img src="images/rotten.gif" alt="Rotten" />
-			<q>It's better than my billion dollars wealth. Yes, THAT GOOD!</q>
-		</p>
-		<p class="profile">
-			<img src="images/critic.gif" alt="Critic" />
-			Bill Gates <br />
-			<i>Microsoft Papers</i>
-		</p>
-	</div>
-		</div>
-		<p class="containerFooter">(1-10) of 88</p>
-	</div>
+            <p class="review">
+                <img src="images/rotten.gif" alt="Rotten"/>
+                <q>It's better than my billion dollars wealth. Yes, THAT GOOD!</q>
+            </p>
+            <p class="profile">
+                <img src="images/critic.gif" alt="Critic"/>
+                Bill Gates <br/>
+                <i>Microsoft Papers</i>
+            </p>
+        </div>
+    </div>
+    <p class="containerFooter">(1-10) of 88</p>
+</div>
 
 
-
-		<div class="footerLinks">
-			<a href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5" /></a> <br />
-			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="Valid CSS" /></a>
-		</div>
-	</body>
+<div class="footerLinks">
+    <a href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5"/></a> <br/>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="Valid CSS"/></a>
+</div>
+</body>
 </html>
