--- a/lab3_movie/tmnt.html
+++ b/lab3_movie/tmnt.html
@@ -1,11 +1,15 @@
+<!-- Movie Review Static Page
+     author: bouncerate
+     lab project -->
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>TMNT - Rancid Tomatoes</title>
 
     <meta charset="utf-8"/>
     <link href="movie.css" type="text/css" rel="stylesheet"/>
-    <link rel="icon" href="/images/rotten.gif" type='image/png'/>
+    <link href="/images/rotten.gif" type="image/x-icon" rel="icon"/>
 </head>
 
 <body>
@@ -21,34 +25,24 @@
         <dl>
             <dt>STARRING</dt>
             <dd>Patrick Stewart <br/> Mako <br/> Sarah Michelle Gellar <br/> Kevin Smith</dd>
-            <br/>
             <dt>DIRECTOR</dt>
             <dd>Kevin Munroe</dd>
-            <br/>
             <dt>RATING</dt>
             <dd>PG</dd>
-            <br/>
             <dt>THEATRICAL RELEASE</dt>
             <dd>Mar 23, 2007</dd>
-            <br/>
             <dt>MOVIE SYNOPSIS</dt>
             <dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
-            <br/>
             <dt>MPAA RATING</dt>
             <dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
-            <br/>
             <dt>RELEASE COMPANY</dt>
             <dd>Warner Bros.</dd>
-            <br/>
             <dt>RUNTIME</dt>
             <dd>90 mins</dd>
-            <br/>
             <dt>GENRE</dt>
             <dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
-            <br/>
             <dt>BOX OFFICE</dt>
             <dd>$54,132,596</dd>
-            <br/>
             <dt>LINKS</dt>
             <dd>
                 <ul>
@@ -62,7 +56,7 @@
     </div>
     <div class="overviewLeft">
         <div class="overall">
-            <img src="images/rottenbig.png" alt="Rotten" align="left"/>
+            <img src="images/rottenbig.png" alt="Rotten"/>
             <span class="rate">33%</span>
         </div>
         <div class="comments">
@@ -188,8 +182,8 @@
 
 
 <div class="footerLinks">
-    <a href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5"/></a> <br/>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="Valid CSS"/></a>
+    <a href="http://validator.w3.org/check/uri=https://bouncerate.github.io/repoForWap/lab3_movie/tmnt.html"><img src="images/w3c-html.png" alt="Valid HTML5"/></a> <br/>
+    <a href=http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fbouncerate.github.io%2FrepoForWap%2Flab3_movie%2Ftmnt.html&profile=css3svg&usermedium=all&warning=1&vextwarning=><img src="images/w3c-css.png" alt="Valid CSS"/></a>
 </div>
 </body>
 </html>
