--- a/lab3_movie/tmnt.html
+++ b/lab3_movie/tmnt.html
@@ -181,7 +181,7 @@
 	<a href="http://validator.w3.org/check?uri=https://bouncerate.github.io/repoForWap/lab3_movie/tmnt.html">
 		<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" />
 	</a>
-	<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fbouncerate.github.io%2FrepoForWap%2Flab3_movie%2Ftmnt.html&profile=css3svg&usermedium=all&warning=1&vextwarning=><img src=" <img src="images/w3c-css.png" alt="Valid CSS"/></a>
+	<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fbouncerate.github.io%2FrepoForWap%2Flab3_movie%2Ftmnt.html&profile=css3svg&usermedium=all&warning=1&vextwarning="><img src="images/w3c-css.png" alt="Valid CSS"/></a>
 </div>
 </body>
 </html>
